Use word-break class to prevent long words in  category names from overflowing in the category side box. Fix #396

--- a/templates/Evo/themes/base/less/base.less
+++ b/templates/Evo/themes/base/less/base.less
@@ -713,7 +713,6 @@ ul.filter_state li a.active:before {
 
 aside .box {
     margin-bottom: 20px;
-    word-break: break-all;
 }
 
 aside .badge {
@@ -2897,7 +2896,7 @@ header.fixed-navbar {
 }
 
 .word-break, .desc, .shortdesc, .product-title {
-     word-break: break-word;
+     word-break: break-all;
     -webkit-hyphens: auto;
        -moz-hyphens: auto;
         -ms-hyphens: auto;
